Implementet test classes and modified pom